change interpretation of trim_trailing_whitespace

remove trailing spaces of modified lines

BUG: 468147